# comp-graphics

t1-2/: app
t1-2/include/: cli.h  math_fns.h  math_functions.h
t1-2/src/: cli.cpp  main.cpp  math_fns.cpp  math_functions.cpp
t10/t1/: CMakeLists.txt
t10/t1/include/: InitialsWidget.h
t10/t1/src/: InitialsWidget.cpp  main.cpp
t10/t2/: CMakeLists.txt
t10/t2/include/: Application.hpp  Flower.hpp
t10/t2/src/: Application.cpp  Flower.cpp  main.cpp
t3/: program
t3/include/: Menu.h  PackagedProduct.h  PackagedShipment.h  ProductBatch.h  SafePackagedProduct.h  SafePackagedShipment.h  SafeTests.h  Shipment.h  Tests.h  tasks.h  tests.h
t3/src/: PackagedProduct.cpp  ProductBatch.cpp  SafePackagedProduct.cpp  main.cpp  menu.cpp  packaged_shipment.cpp  safe_packaged_shipmnet.cpp  safe_tests.cpp  shipment.cpp  tasks.cpp  test.cpp  tests.cpp
t4/include/: tasks.h
t4/src/: main.cpp  task1.cpp  task2.cpp  task3.cpp
t5/: program
t5/include/: Account.h  Car.h  tests.h
t5/src/: Account.cpp  Car.cpp  main.cpp  tests.cpp
t6/: program
t6/include/: IPhone.h  Xiaomi.h
t6/src/: IPhone.cpp  Xiaomi.cpp  main.cpp  task1.cpp  task2.cpp  task3.cpp
t7/include/: Account.h  Bank.h  MicroBank.h
t7/src/: Account.cpp  Bank.cpp  MicroBank.cpp  main.cpp  task1.cpp  task2.cpp  task3.cpp
t8/include/: tasks.h
t8/src/: main.cpp  task1.cpp  task2.cpp
t9/include/: tasks.h
t9/src/: main.cpp  task1.cpp
